<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percentage">Tip %</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="number_of_people">Number of\n People</string>
    <string name="number_of_people2">Number of People</string>
    <string name="per_person">Per Person\n Pays</string>
    <string name="per_person2">Per Person Pays</string>
    <string name="total_amount">Total Amount</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
</resources>
