<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <!-- App name centered at the top -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <!-- Reset icon at the end of the screen -->
            <ImageView
                android:id="@+id/resetIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_reset" />

            <!-- Settings icon at the end of the screen -->
            <!-- <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/resetIcon"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_settings" /> -->
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp"        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end|center_vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/billAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/bill_amount"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#423d49" />

            <EditText
                android:id="@+id/billAmountEditText"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_gravity="end"
                android:paddingLeft="15dp"
                android:fontFamily="@font/tipfont"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginEnd="14dp"
                android:textSize="26sp"
                android:background="@drawable/background"
                android:textColor="#000000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end|center_vertical"
            android:layout_marginBottom="30dp"
            android:textSize="16sp">

            <TextView
                android:id="@+id/tipPercentageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_percentage"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:textColor="#423d49"/>

            <SeekBar
                android:id="@+id/tipSeekBar"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="14dp"
                android:textColor="#000000"
                style="@style/MySeekBar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:textSize="16sp">



            <TextView
                android:id="@+id/tipAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tip_amount"
                android:textColor="#423d49"
                android:textSize="17sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/tipAmountEditText"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="14dp"
                android:background="@drawable/background"
                android:fontFamily="@font/tipfont"
                android:inputType="numberDecimal"
                android:paddingLeft="15dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColor="#000000"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textSize="16sp"
            android:layout_marginBottom="70dp"
            android:textColor="#000000"
            android:gravity="end|center_vertical">

            <TextView
                android:id="@+id/numberOfPeopleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_people"
                android:layout_marginEnd="20dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="end|center_vertical"
                android:textColor="#423d49"/>

            <EditText
                android:id="@+id/numberOfPeopleEditText"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="1"
                android:layout_gravity="end"
                android:paddingLeft="15dp"
                android:fontFamily="@font/tipfont"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginEnd="14dp"
                android:textSize="26sp"
                android:textColor="#000000"
                android:background="@drawable/background"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:gravity="end|center_vertical">


            <TextView
                android:id="@+id/perperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_person"
                android:textSize="17.5sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:textColor="#423d49"
                android:gravity="end|center_vertical"
                />

            <TextView
                android:id="@+id/perPersonTextView"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:layout_gravity="end"
                android:paddingLeft="15dp"
                android:fontFamily="@font/tipfont"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginEnd="14dp"
                android:textSize="26sp"
                android:textColor="#000000"
                android:background="@drawable/backgroundred"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:textColor="#000000">

            <TextView
                android:id="@+id/totalamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/total_amount"
                android:textStyle="bold"
                android:textSize="17.5sp"
                android:textColor="#423d49" />

            <TextView
                android:id="@+id/totalAmountTextView"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="14dp"
                android:background="@drawable/backgroundgreen"
                android:fontFamily="@font/tipfont"
                android:paddingLeft="15dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="0.00"
                android:textColor="#000000"
                android:textSize="26sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textColor="#000000"
            android:textSize="15sp">

            <Button
                android:id="@+id/copyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button"
                android:text="@string/copy" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button"
                android:text="@string/share" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
